<resources>
    <string name="app_name">Fit Up</string>
    <string name="action_settings">Einstellungen</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="notifikationen">Notifikationen</string>
    <string name="aktivitaeten">Aktivitäten</string>
    <string name="title_activity_login">Anmeldung</string>
    <string name="tagebucheintrag">Tagebucheintrag</string>
    <string name="tagebucheintrag_desc">Die sportlichen Aktivitäten, die Sie durchgeführt haben</string>
    <string name="nun_ist_es_soweit">Nun ist es soweit. Haben Sie heute trainert?</string>
    <string name="stimmungsabgabe">Stimmungsabgabe</string>
    <string name="stimmungsabgaben">Stimmungsabgaben</string>
    <string name="stimmungsabgabe_desc">Ihre Stimmung vor und nach dem Training</string>
    <string name="wie_fuhlen_sie_moment">Wie fühlen Sie sich in diesem Moment?</string>
    <string name="wie_aktiv">Wie aktiv sind Sie?</string>
    <string name="wie_ist_fitnesstand">Wie ist Ihr Fitnessstand?</string>
    <string name="bewegen_sie_sich">Bewegen Sie sich!</string>
    <string name="ihr_korper_ihnen_danken">Ihr Körper wird\'s Ihnen danken.</string>
    <string name="naechstes_training">Nächstes Training</string>
    <string name="ihr_naechstes_train_begin_um">Ihr nächstes Training beginnt um </string>
    <string name="ihr_train_begin_in">Ihr Training beginnt in </string>
    <string name="minuten"> Minuten</string>
    <string name="aktivitaetsfragebogen">Aktivitätsfragebogen</string>
    <string name="aktivitaetsfragebogen_desc">Bewertung der Bewegungs- und Sportaktivität</string>
    <string name="prompt_email">E-Mail</string>
    <string name="prompt_password">Passwort</string>
    <string name="action_sign_in">Anmelden oder Registrieren</string>
    <string name="action_sign_in_short">Anmelden</string>
    <string name="error_invalid_email">E-Mail ungültig</string>
    <string name="error_invalid_password">Passwort zu kurz</string>
    <string name="error_incorrect_password">Passwort inkorrekt</string>
    <string name="error_field_required">Dieses Feld wird benötigt</string>
    <string name="permission_rationale">"Kontaktberechtigung für Autokompletierung benötigt"</string>
    <string name="fitnessfragebogen">Fitnessfragebogen</string>
    <string name="fitnessfragebogen_desc">Erfassung des motorischen Funktionsstatus</string>
    <string name="erfolgreichgespeichert">Erfolgreich gespeichert</string>
    <string name="erfolgreichgeloescht">Erfolgreich gelöscht</string>
    <string name="bitte_geben_sie_moment_fuhlen">Bitte geben Sie an, wie Sie sich jetzt d.h. in diesem Moment fühlen</string>
    <string name="angespannt">Angespannt</string>
    <string name="traurig">Traurig</string>
    <string name="traurig_und_niedergeschlagen">Traurig und niedergeschlagen</string>
    <string name="tatkraeftig">Tatkräftig</string>
    <string name="zerstreut">Zerstreut</string>
    <string name="wuetend">Wütend</string>
    <string name="muede">Müde</string>
    <string name="selbstsicher">Selbstsicher</string>
    <string name="mitteilsam">Mitteilsam</string>
    <string name="wird_geladen">Wird geladen...</string>
    <string name="kompass">Kompass</string>
    <string name="ueberhaupt_nicht">Überhaupt nicht</string>
    <string name="wenig">Wenig</string>
    <string name="mittelmaessig">Mittelmäßig</string>
    <string name="ziemlich">Ziemlich</string>
    <string name="extrem">Extrem</string>
    <string name="taetigkeiten">Tätigkeiten</string>
    <string name="ntf_title">Fit up</string>
    <string name="ntf_stimmungsabgabe">Es ist bald Zeit zum trainieren. Wie fühlen Sie sich?</string>
    <string name="ntf_stimmungsabgabe_nach">Sie sind fertig mit dem Training. Wie fühlen Sie sich?</string>
    <string name="ntf_fitnessfragebogen">Wie gut ist ihr Fitnessstand? Beantworten Sie den Fragebogen.</string>
    <string name="ntf_aktivitaetsfragebogen">Wie aktiv sind Sie? Beantworten Sie den Fragebogen.</string>
    <string name="Wie_gut_koennen_Sie_folgende_Taetigkeiten_bewaeltigen">Wie gut können Sie folgende Tätigkeiten bewältigen? \n</string>
    <string name="Koennen_Sie">Können Sie... \n</string>
    <string name="auf_einem_Stuhl_sitzend_ohne_Hilfe_aufstehen">1. ... auf einem Stuhl sitzend ohne Hilfe aufstehen?</string>
    <string name="einen_schweren_Einkaufskorb_ueber_mehrere_Etagen_tragen">2. ... einen schweren Einkaufskorb (8 kg) über mehrere Etagen tragen?</string>
    <string name="eine_volle_Bierkiste_in_den_Keller_tragen">3. ... eine volle Bierkiste in den Keller tragen?</string>
    <string name="aus_der_Rueckenlage_ohne_Hilfe_der_Arme_den_Oberkoerper_aufrichten">4. ... aus der Rückenlage ohne Hilfe der Arme den Oberkörper aufrichten (Situp)?</string>
    <string name="einen_schweren_Koffer_ueber_Kopfhoehe_heben">5. ... einen schweren Koffer über Kopfhöhe heben (z.B. im Zug auf die Gepäckablage)?</string>
    <string name="zwei_schwere_Koffer_ueber_mehrere_Etagen_tragen">6. ... zwei schwere Koffer über mehrere Etagen tragen?</string>
    <string name="eine_Hantel_mit_mehr_als_Ihrem_Koerpergewicht_hochstemmen">7. ... eine Hantel mit mehr als Ihrem Körpergewicht hochstemmen?</string>
    <string name="um_mehrere_Blocks_flott_gehen">8. ... um mehrere Blocks flott gehen?</string>
    <string name="mehrere_Treppen_hochgehen_ohne_sich_auszuruhen">9. ... mehrere Treppen hochgehen ohne sich auszuruhen?</string>
    <string name="zwei_Kilometer_schnell_gehen_ohne_sich_auszuruhen">10. ... zwei Kilometer schnell gehen (walken) ohne sich auszuruhen?</string>
    <string name="einen_Kilometer_ohne_Pause_joggen">11. ... einen Kilometer ohne Pause joggen?</string>
    <string name="Minuten_ohne_Pause_joggen">12. ... 30 Minuten ohne Pause joggen (ca. 5 km)?</string>
    <string name="eine_Stunde_ohne_Pause_joggen">13. ... eine Stunde ohne Pause joggen (ca. 10km)?</string>
    <string name="einen_Marathon_laufen">14. ... einen Marathon (42 km) laufen?</string>
    <string name="einen_engen_Pulli_und_Socken_alleine_aus_und_anziehen">15. ... einen engen Pulli und Socken alleine aus- und anziehen?</string>
    <string name="auf_einem_Stuhl_sitzend_mit_den_Haenden_den_Boden_erreichen">16. ... auf einem Stuhl sitzend mit den Händen den Boden erreichen?</string>
    <string name="im_Stehen_Schuhe_binden">17. ... im Stehen Schuhe binden?</string>
    <string name="mit_der_Hand_von_unten_auf_dem_Ruecken_ein_Schulterblatt_beruehren">18. ... mit der Hand von unten auf dem Rücken ein Schulterblatt berühren?</string>
    <string name="aus_dem_Stand_mit_den_Haenden_den_Boden_erreichen">19. ... aus dem Stand (Knie gestreckt) mit den Händen den Boden erreichen?</string>
    <string name="im_Stehen_mit_dem_Kopf_die_gestreckten_Knie_beruehren">20. ... im Stehen mit dem Kopf die gestreckten Knie berühren?</string>
    <string name="rueckwaerts_bis_in_die_Bruecke_abbeugen">21. ... rückwärts bis in die Brücke abbeugen?</string>
    <string name="eine_Treppe_hinab_gehen_ohne_sich_festzuhalten">22. ... eine Treppe hinab gehen, ohne sich festzuhalten?</string>
    <string name="auf_einem_Bein_stehen_ohne_sich_festzuhalten">23. ... auf einem Bein stehen, ohne sich festzuhalten (min. 15 Sekunden)?</string>
    <string name="einen_Purzelbaum">24. ... einen Purzelbaum?</string>
    <string name="im_schnellen_Gehen_einen_Ball_prellen">25. ... im schnellen Gehen einen Ball prellen?</string>
    <string name="mit_Abstuetzen_ueber_einen_ein_Meter_hohen_Zaun_springen">26. ... mit Abstützen über einen ein Meter hohen Zaun springen?</string>
    <string name="freihaendig_mit_dem_Fahrrad_um_eine_Kurve_fahren">27. ... freihändig mit dem Fahrrad um eine Kurve fahren?</string>
    <string name="ein_Rad_schlagen">28. ... ein Rad schlagen?</string>
    <string name="Fragebogen_ist_beendet_Bitte_speichern_Sie_Ihre_Antworten">Fragebogen ist beendet. \n Bitte speichern Sie Ihre Antworten.</string>
    <string name="Fuellen_Sie_bitte_den_folgenden_Fragebogen_aus">Füllen Sie bitte den folgenden Fragebogen aus! \n</string>
    <string name="Sind_Sie_berufstaetig_oder_in_Ausbildung">Sind Sie berufstätig oder in Ausbildung?</string>
    <string name="Umfasst_Ihre_Berufstaetigkeit_sitzende_Taetigkeiten">Umfasst Ihre Berufstätigkeit bzw. Ausbildung sitzende Tätigkeiten?</string>
    <string name="Umfasst_Ihre_Berufstaetigkeit_Ausbildung_maeßige_Bewegung">Umfasst Ihre Berufstätigkeit bzw. Ausbildung mäßige Bewegung?</string>
    <string name="Umfasst_Ihre_Berufstaetigkeit_Ausbildung_intensive_Bewegung">Umfasst Ihre Berufstätigkeit bzw. Ausbildung intensive Bewegung?</string>
    <string name="Folgende_Fragen_beziehen_sich_auf_den_Zeitraum_von_Wochen">Folgende Fragen beziehen sich auf den Zeitraum von Wochen! \n </string>
    <string name="Zu_Fuß_zur_Arbeit_gehen">\n Zu Fuß zur Arbeit gehen (auch längere Teilstrecken).</string>
    <string name="Anzahl_Tage">Anzahl der Tage</string>
    <string name="Minuten_pro_Tag">Minuten pro Tag</string>
    <string name="Zu_Fuß_zum_Einkaufen_gehen">\n Zu Fuß zum Einkaufen gehen</string>
    <string name="Radfahren_zur_Arbeit">\n Radfahren zur Arbeit</string>
    <string name="Radfahren_zu_sonstigen_Fortbewegungszwecken">\n Radfahren zu sonstigen Fortbewegungszwecken</string>
    <string name="Spazierengehen">\n Spazierengehen</string>
    <string name="Gartenarbeit">\n Gartenarbeit (z.B. Rasen mähen, Hecke schneiden)</string>
    <string name="Koerperlich_anstrengende_Hausarbeit">\n Körperlich anstrengende Hausarbeit (z.B. Putzen, Aufräumen)</string>
    <string name="Koerperlich_anstrengende_Pflegearbeit">\n Körperlich anstrengende Pflegearbeit (z.B. Kinder betreuen, Kranke pflegen)</string>
    <string name="Treppensteigen">\n Treppensteigen</string>
    <string name="Stockwerke_pro_Tag">Stockwerke pro Tag</string>
    <string name="Sportlichakitv_Aktivitaeten">\n \n \n Haben Sie im angegebenen Zeitraum regelmäßig sportliche Aktivität betrieben? Hierzu zählen Aktivitäten, die größere Muskelgruppen beanspruchen und zur Verbesserung der Ausdauer, Kraft und/oder Beweglichkeit führen, wie z.B. Fahrradfahren, Joggen, Fußball spielen und Reiten. Ausgeschlossen werden dabei Aktivitäten wie z.B. Schach, Billiard und Angeln. \n</string>
    <string name="Um_welche_sportliche_Aktivitaet_handelt_es_sich_dabei">Um welche sportliche(n) Aktivitäte(en) handelt es sich dabei? \n</string>
    <string name="Aktivitaet_A">Aktivität A</string>
    <string name="Aktivitaet_B">\n Aktivität B</string>
    <string name="Aktivitaet_C">\n Aktivität C</string>
    <string name="Bitte_tragen_Sie_hier_die_Sportart_ein">Bitte tragen Sie hier die Sportart ein!</string>
    <string name="Wie_oft_haben_Sie_ausgeuebt">Wie oft haben Sie die Aktivität ausgeübt?</string>
    <string name="Anzahl_der_Trainingseinheiten">Anzahl der Trainingseinheiten</string>
    <string name="Fuer_wie_viele_Minuten_haben_Sie_diese_Aktivitaet_jedes_Mal_ausgefuehrt">Für wie viele Minuten haben Sie diese Aktivität jedes Mal ausgeführt?</string>
    <string name="Minuten_pro_Einheit">Minuten pro Einheit</string>
    <string name="Fitnessfragebogeninfo">Bitte geben Sie zu den nächsten 28 Fragen eine spontane Einschätzung ab. Klicken Sie bitte auf das Feld, welches Ihrer Einschätzung nach am besten auf Sie zutrifft. Es kommt nicht darauf an, die Tätigkeit oft durchgeführt zu haben. Entscheidend ist, was Sie sich wirklich zutrauen.</string>
    <string name="Information">Information</string>
    <string name="Ergebnis">Ergebnis</string>
    <string name="Kraftscore">Kraftscore: </string>
    <string name="Stunden">Stunden</string>
    <string name="Minuten"> Minuten</string>
    <string name="BenötigteZeit">Benötigte Zeit:</string>
    <string name="gesagmtewerte">Gesamtwerte</string>
    <string name="ausdauer">Ausdauer</string>
    <string name="beweglichkeit">Beweglichkeit</string>
    <string name="kooridination">Koordination</string>
    <string name="kraft">Kraft</string>
</resources>