<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_gravity="top|center"
    android:layout_width="280dp"
    android:layout_height="350dp">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">


        <TextView
            android:id="@+id/textView25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="24dp"
            android:text="@string/BenötigteZeit"
            android:textSize="28sp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView27"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Stunden"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Minuten"
                android:textAlignment="center"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <NumberPicker
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:id="@+id/numberPickerHours"
                android:layout_weight="0.92">

            </NumberPicker>

            <NumberPicker
                android:layout_height="wrap_content"
                android:id="@+id/numberPickerMinutes"
                android:layout_width="140dp">

            </NumberPicker>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/npCancel"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="128dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:paddingBottom="8dp"
            android:paddingEnd="8dp"
            android:paddingLeft="8dp"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:text="@android:string/cancel" />

        <Button
            android:id="@+id/npOk"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="128dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:paddingBottom="8dp"
            android:paddingEnd="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:text="@string/button_ok_text" />
    </LinearLayout>
</LinearLayout>